<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Product name" />

    <EditText
        android:id="@+id/editProductUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Unit (e.g. box, ml)" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPurchasePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Purchase price" />

    <EditText
        android:id="@+id/editMarginValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Margin value" />

    <Spinner
        android:id="@+id/spinnerMarginType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Product" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
</ScrollView>