...
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Category name"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
